# sec-mcp

./: .gitignore  .pre-commit-config.yaml  :memory:  BENCHMARK_PLAYBOOK.md  CHANGELOG.md  CODE_REVIEW_REPORT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_PROPOSAL_V2.md  PERFORMANCE_QUALITY_REVIEW.md  README.md  TODO-LIST.md  benchmark.py  grok-code.py  pyproject.toml  pytest.ini  requirements.txt  run_benchmark.sh  setup.py  start_server.py  test_mcp.db-shm  test_mcp.db-wal  test_server.py
.github/: copilot-instructions.md
.github/workflows/: deploy-landing-page.yml  pypi-publish.yml
docs/: playbook.md  prd.md  tasks.md  todo-list.md
examples/: example_client.py
mcp_client/: __init__.py  core.py  interface.py  storage.py  update_blacklist.py  utility.py
mcp_client/tests/: test_core.py  test_interface.py  test_storage.py  test_utility.py
react-landing-page/: README.md  index.html  package-lock.json  package.json  vite.config.js
react-landing-page/public/: manifest.json
react-landing-page/src/: App.jsx
react-landing-page/src/components/: APIReference.jsx  CodeBlock.jsx  Features.jsx  Footer.jsx  Header.jsx  Hero.jsx  Installation.jsx  MCPServer.jsx
sec_mcp/: __init__.py  cli.py  core.py  mcp_server.py  sec_mcp.py  start_server.py  storage.py  storage_v2.py  update_blacklist.py  utility.py
sec_mcp/tests/: test_cli.py  test_compatibility.py  test_mcp_server.py  test_sec_mcp.py  test_start_server.py  test_storage.py  test_storage_v2.py  test_update_blacklist.py  test_utility.py
