[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sec-mcp"
version = "0.1.0"
description = "Model Context Protocol (MCP) Client for checking domains, URLs, and IPs against blacklists"
requires-python = ">=3.11"
authors = [
    {name = "Luong NGUYEN"}
]
dependencies = [
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "click>=8.1.7",
    "idna>=3.4",
    "mcp[cli]>=0.1.0",
    "schedule>=1.2.0",
    "tqdm>=4.66.0",
]

[project.scripts]
sec-mcp = "sec_mcp.cli:cli"
sec-mcp-server = "sec_mcp.start_server:main"

[tool.setuptools.packages.find]
where = [".",]
include = ["sec_mcp*"]
