[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sec-mcp"
version = "0.4.0"
description = "Python toolkit providing security checks for domains, URLs, IPs, and more."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [ { name = "Montimage" } ]
dependencies = [
  "requests>=2.31.0",
  "httpx>=0.25.0",
  "click>=8.1.7",
  "idna>=3.4",
  "mcp[cli]>=0.1.0",
  "schedule>=1.2.0",
  "tqdm>=4.66.0",
  "pytricia>=1.0.0",
  "psutil>=5.9.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Security",
]
keywords = ["security", "blacklist", "mcp", "phishing", "malware"]

[project.urls]
Homepage      = "https://github.com/Montimage/sec-mcp"
Repository    = "https://github.com/Montimage/sec-mcp.git"
Documentation = "https://github.com/Montimage/sec-mcp#readme"

[project.scripts]
sec-mcp = "sec_mcp.cli:cli"
sec-mcp-server = "sec_mcp.start_server:main"

[project.optional-dependencies]
dev = [
  "pre-commit>=3.5.0",
  "black>=23.11.0",
  "isort>=5.12.0",
  "ruff>=0.1.6",
  "mypy>=1.7.0",
  "bandit>=1.7.5",
  "safety>=2.3.5",
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.1",
  "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sec_mcp*"]

# Black configuration
[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "ARG", # flake8-unused-arguments
  "SIM", # flake8-simplify
]
ignore = [
  "E501",  # line too long (handled by black)
  "E402",  # module level import not at top of file (needed for sys.path manipulation)
  "E722",  # bare except (will fix gradually)
  "F401",  # imported but unused (false positives in try/except import checks)
  "F811",  # redefinition of unused (will fix)
  "B008",  # do not perform function calls in argument defaults
  "B904",  # raise from (will add gradually)
  "C901",  # too complex
  "W191",  # indentation contains tabs
  "SIM102", # nested if (will simplify gradually)
  "SIM108", # ternary operator (preference)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"sec_mcp/tests/**" = ["ARG", "S101"]  # Allow unused args and asserts in tests

# Mypy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = false  # Disable for now
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient, can tighten later
ignore_missing_imports = true
check_untyped_defs = false  # Disable for now

# Coverage configuration
[tool.coverage.run]
source = ["sec_mcp"]
omit = [
  "*/tests/*",
  "*/test_*.py",
  "*/__pycache__/*",
  "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# Bandit configuration
[tool.bandit]
exclude_dirs = ["/tests", "/test_*.py"]
skips = [
  "B101",  # Allow asserts (used in tests)
  "B311",  # Random for benchmarks (not cryptographic)
  "B608",  # SQL injection false positives (hardcoded table names)
  "B110",  # Try-except-pass (will fix gradually)
]
